# Klein

./: Cargo.toml  README.md  Taskfile.yml  cliff.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml  test-installers.yml
src/: app.rs  config.rs  editor.rs  main.rs  sidebar.rs  terminal.rs
src/events/: mod.rs
src/ui/: editor.rs  help.rs  layout.rs  mod.rs  sidebar.rs  status_bar.rs  tabs.rs  terminal.rs
